Fix admin sidebar icons visibility on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1834,8 +1834,11 @@ select.form-input {
     width: 64px;
   }
 
-  .admin-sidebar-logo,
-  .admin-nav-item span {
+  .admin-sidebar-logo {
+    display: none;
+  }
+
+  .admin-nav-item span:not(.nav-icon) {
     display: none;
   }
 
